[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "cellerator"
version = "0.1.0"
description = "Thin Python wrapper for Cellerator dataset ingest, inspect, and preprocess workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["cellshard>=0.1.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["python/cellerator"]
cmake.define.CELLERATOR_ENABLE_PYTHON = "ON"
cmake.define.CELLERATOR_ENABLE_TORCH_MODELS = "OFF"
cmake.define.CELLERATOR_ENABLE_NCURSES_WORKBENCH = "OFF"

